--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <version>1.5.2</version>
     </dependency>
     <dependency>
+        <groupId>commons-httpclient</groupId>
+        <artifactId>commons-httpclient</artifactId>
+        <version>3.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.4</version>
