--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,19 @@
       <name>Scala-Tools Maven2 Repository</name>
       <url>http://scala-tools.org/repo-releases</url>
     </repository>
-  </repositories>
+		<repository>
+			<id>specs-repo</id>
+			<name>specs repository</name>
+			<layout>default</layout>
+			<url>http://specs.googlecode.com/svn/maven2/</url>
+			<releases>
+				<checksumPolicy>ignore</checksumPolicy>
+			</releases>
+			<snapshots>
+				<checksumPolicy>ignore</checksumPolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 
   <pluginRepositories>
     <pluginRepository>
@@ -44,13 +56,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.4</version>
+      <version>4.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.specs</groupId>
+      <groupId>org.scala-tools.testing</groupId>
       <artifactId>specs</artifactId>
-      <version>1.4.0</version>
+      <version>1.4.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
