--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>twitter4s</groupId>
-  <artifactId>twitter4s</artifactId>
-  <name>twitter4s</name>
+  <groupId>scat</groupId>
+  <artifactId>scat</artifactId>
+  <name>scat</name>
   <version>1.0-SNAPSHOT</version>
   <inceptionYear>2009</inceptionYear>
   <properties>
